mybatis 3.4.1 추가 매핑 오류 수정 클래스 분리

--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -8,7 +8,7 @@ log4j.rootLogger=DEBUG,console,logfile
 #log4j.rootLogger=DEBUG,INFO,ERROR,FATAL,TRACE,logfile,server
 #log4j.rootLogger=DEBUG,INFO,ERROR,FATAL,TRACE,server
 
-log4j.logger.com.zaxxer.hikari=DEBUG
+log4j.logger.com.zaxxer.hikari=INFO
 
 #log4j.appender.server=org.apache.log4j.net.SocketAppender
 #log4j.appender.server.Port=4712
