--- a/pom.xml
+++ b/pom.xml
@@ -193,6 +193,15 @@
 		    <version>4.3.1.RELEASE</version>
 		</dependency>
 		
+				
+		<!-- https://mvnrepository.com/artifact/org.mybatis/mybatis -->
+			<dependency>
+			    <groupId>org.mybatis</groupId>
+			    <artifactId>mybatis</artifactId>
+			    <version>3.4.1</version>
+			</dependency>
+		
+		
 	</dependencies>
 
 </project>
