--- a/pom.xml
+++ b/pom.xml
@@ -6,6 +6,18 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
 	<name>JBBS</name>
+	
+	<repositories>
+		<repository>
+			<id>saro.public</id>
+			<name>public</name>
+			<url>https://dp-nexus.saro.me/content/groups/public/</url>
+			<releases><enabled>true</enabled></releases>
+			<snapshots><enabled>true</enabled></snapshots>
+		</repository>
+	</repositories>
+	
+	
 	<build>
 		<sourceDirectory>src</sourceDirectory>
 		<plugins>
@@ -27,6 +39,7 @@
 			</plugin>
 		</plugins>
 	</build>
+	
 	<dependencies>
 		<dependency>
 			<groupId>org.bouncycastle</groupId>
@@ -179,10 +192,10 @@
 			<artifactId>javassist</artifactId>
 			<version>3.16.1-GA</version>
 		</dependency>
-		<dependency> 
-			<groupId>com.microsoft.sqlserver</groupId> 
-			<artifactId>sqljdbc42</artifactId> 
-			<version>4.2</version>
+		<dependency>
+		  <groupId>com.microsoft.sqlserver</groupId>
+		  <artifactId>sqljdbc42</artifactId>
+		  <version>4.2</version>
 		</dependency>
 		
 		<!-- https://mvnrepository.com/artifact/org.springframework/spring-jdbc -->
