--- a/pom.xml
+++ b/pom.xml
@@ -192,6 +192,12 @@
 			<artifactId>javassist</artifactId>
 			<version>3.16.1-GA</version>
 		</dependency>
+		<!-- 서블릿 -->
+		<dependency>
+			<groupId>javax.servlet</groupId>
+			<artifactId>javax.servlet-api</artifactId>
+			<version>3.1.0</version>
+		</dependency>
 		<dependency>
 		  <groupId>com.microsoft.sqlserver</groupId>
 		  <artifactId>sqljdbc42</artifactId>
